food.css
@charset "utf-8";
/* CSS Document */


body.post-type-archive-food.archive h1.entry-title {
	position:absolute;
	top: 51%;
	padding:0.9rem;
	font-size: 12px;
	font-size: 1.2em;
	z-index: 222;
}

body.single-food .venue-block h1.entry-title {
	position:absolute;
	padding:0.9rem;
	font-size: 1.4rem;
	z-index: 222;
	top: 10%;
}


body.post-type-archive-food .entry-header {
	margin-bottom: 0.1rem;
}

body.post-type-archive-food footer.entry-meta {
}

body.post-type-archive-food article.food {
	border:none;

}

body.post-type-archive-food .entry-content {
	height: 5rem;
	max-height: 5rem;
}




body.single-food h2.caption {



/* float: right; */

font-size:20px;




font-size: 0.8rem;
font-family:'Gill Sans W04 Light',Helvetica,Arial,sans-serif;
line-height:1.2rem;
padding:1rem;
font-weight:bold;
background:#e31936;
color:#FFFFFF;
margin-left:0rem;
left:0%;




top: 21%;
width:auto;
position:absolute;
padding: 0.5rem 0.5rem 0.5rem 1rem;
z-index:233;




height: 1.2rem;



}


body.post-type-archive-food h2.caption {
	
	/* float: right; */


font-size:0.75rem;
font-family:'Gill Sans W04 Light',Helvetica,Arial,sans-serif;
line-height:1.2rem;
padding:1rem;
font-weight:bold;
background:#e31936;
color:#FFFFFF;
margin-left:0rem;
left:0%;
top:70%;
width:auto;
position:absolute;
padding: 0.5rem 0.5rem 0.5rem 1rem;
z-index:233;
}


body.post-type-archive-food .entry-header .entry-title {
	margin-left: 0;
}

body.single-food .entry-header .entry-title {
}




body.post-type-archive-food article.food {
width: 32%;
	float:left;
}

body.post-type-archive-food article.food:nth-child(3n) {
	margin: 0 2%;
}



body.post-type-archive-food .entry-header {
	width:100%;
	height: 100%;
}



body.post-type-archive-food div.job-description {
	right: 0;
	position:absolute;
	display:block;
	top: 0;
	background: #e31936;
	color:#FFF;
	bottom: 0;
	padding: 2rem 0rem 0rem 1rem;
	left: 0;
	right: 0;
}

body.post-type-archive-food div.cycle-slideshow {
	
	position:relative;
	z-index:2;
	
	
	height: 100%;
}

body.post-type-archive-food div.venue-block {
	
height: 165px;
background: #000;
overflow: hidden;
border-bottom: 3px solid #e31936;
position:relative;
}





body.post-type-archive-food div.venue-block img {
	
transition: opacity 0.5s;	
width:auto;
min-width:101%;
max-width:200%;
height: 100%;
display: block;
position: absolute;
left: 0;
right:0;
bottom:0;
top: 0;
margin: auto;
transition: all 0.4s ease;
border:none;
}


body.post-type-archive-food div.venue-block:hover img {
	transform: scale(1.1,1.1);
	-webkit-transform: scale(1.1,1.1);
	-moz-transform: scale(1.1,1.1);
	-ms-transform: scale(1.1,1.1);
	opacity: 0.6;
	
}



/* #e31936 */


ul.food-menu-items {
	display:block;
	width:100%;
	clear:both;
}

ul.food-menu-items:after {
	content:"";
	display:block;
	float:none;
	clear:both;
	width:100%;
	height:1px;
}

ul.food-menu-items li {
	
	width:48%;
	margin: 0;
	float: left;
	margin-bottom:10px;
	margin-bottom:1rem;
	position:relative;
	list-style-type: none;
	
}

ul.food-menu-items li:nth-child(even) {
	margin-left:2%;
	list-style-type: none;
	
}

ul.food-menu-items li span {
	width:100%;
	height: 229px;
	overflow: hidden;
	display:block;
	clear:both;
	position: relative;
	list-style: none;
	background: #FFFFFF;;
}

ul.food-menu-items.list-only li span {
	width:100%;
	height: auto;
	overflow: hidden;
	display:block;
	clear:both;
	position: relative;
	list-style: none;
	
	background: #FFFFFF;;
}

ul.food-menu-items.list-only li span h3 {
	width: 100%;
	line-height:30px;
	background: #FFFFFF;
	color: #e31936;
	position: relative;
	padding: 0;
}

ul.food-menu-items li span img {
	position:absolute;
	margin: auto;
	left: 0;
	right: 0;
	top: 0;
	width: 100%;
	height: auto;
	width: auto;
	z-index:1;
	transition: all 0.2s ease;
}

ul.food-menu-items li span img:hover {
	transform: scale(1.1,1.1);
	-webkit-transform: scale(1.1,1.1);
	opacity:0.8;
}

ul.food-menu-items li span h3 {
	position: absolute;
	background: #e31936;
	bottom: 0;
	left:0;
	padding: 5px 10px;
	padding: 0.5rem 1rem;
	width: 100%;
	z-index:2;
	color: #ffffff;
	font-size: 20px;
	font-size: 2rem;
	margin: 0;
}


ul.food-menu-items li p {
    padding: 2px;
	
}



/**//**/@media screen and (max-width:600px) {


body.post-type-archive-food article.food {
	width:100%;
	height: 285px;
	margin-bottom: 30px !important;
}

body.post-type-archive-food div.venue-block {
	height:100%;
}

body.post-type-archive-food div.venue-block img {
	height:100%;
}

body.post-type-archive-food.archive h1.entry-title {
	position:absolute !important;
	width: 70% !important;
	bottom:10%;
	top: inherit !important;
	height:auto;
	padding: 3% 3% 3% 3%;
	font-size:24px;
	font-size:2.4rem;
	margin: auto !important;
}

body.post-type-archive-food article.food:nth-child(3n) {
	margin:auto;
}

}

